# engine

./: CLAUDE.md  Cargo.toml  ENGINE.md  build.rs  clippy.toml
.github/workflows/: rust.yml
res/dust/: Untitled.gltf
src/: app.rs  camera.rs  depth_debug.wgsl  frustum.rs  instance.rs  lib.rs  model.rs  renderer.rs  resources.rs  shader.wgsl  shadow.wgsl  texture.rs
src/game/: camera.rs  components.rs  entities.rs  init.rs  input.rs  mod.rs  systems.rs
