[package]
name = "engine"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
hecs = { version = "0.10", features = ["macros"] }
pollster = "0.3"
log = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async"]}
gltf = { version = "1.4", features = ["image"] }
wgpu = "29.0"
winit = { version = "0.30", features = ["android-native-activity"] }
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "tga"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "engine"
path = "src/main.rs"
